Se creó con Colab

--- a/Taller_2.ipynb
+++ b/Taller_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO661WKroHXW4cwaK+df9J3",
+      "authorship_tag": "ABX9TyM5ZPenhxBYyoSI0UVEVMlf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,9 +57,9 @@
       "cell_type": "markdown",
       "source": [
         "#Solución al punto 2.4\n",
-        "¡Claro! Aquí tienes el texto adaptado para que sea compatible con **Google Colab** en la sección de texto (usando Markdown y LaTeX para fórmulas):\n",
         "\n",
-        "---\n",
+        "\n",
+        "\n",
         "\n",
         "### Distorsión Total de Armónicos (THD)\n",
         "\n",
@@ -260,7 +260,7 @@
         "\n",
         "### Ejemplo en Python\n",
         "\n",
-        "A continuación, se presenta un ejemplo en Python que genera y grafica señales AM en el tiempo y en frecuencia para dos tipos de señales mensaje: un pulso rectangular y un coseno. El usuario puede definir el índice de modulación.\n",
+        "A continuación, se presenta un ejemplo en Python que genera y grafica señales AM en el tiempo y en frecuencia para dos tipos de señales mensaje: un pulso rectangular y un coseno.\n",
         "\n"
       ],
       "metadata": {
