Se creó con Colab

--- a/PRUEBA_DEL_AUDIO.ipynb
+++ b/PRUEBA_DEL_AUDIO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqHa0fGCORYSKMQxNXrnoJ",
+      "authorship_tag": "ABX9TyOz3JMJvJhqDS1hJ0e1ofLm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "!cp \"/content/drive/MyDrive/PARCIAL DEFINITIVO 2 DEF.zip\" /content/\n",
+        "import shutil\n",
+        "shutil.unpack_archive(\"/content/drive/MyDrive/PARCIAL DEFINITIVO 2 DEF.zip\", \"/content/modelo_extraido\")\n",
+        "!ls /content/modelo_extraido\n",
+        "import joblib\n",
+        "\n",
+        "modelo_pkl = \"/content/modelo_extraido/deteccion_palabra_clave.pkl\"\n",
+        "modelo = joblib.load(modelo_pkl)\n",
+        "\n",
+        "print(\"Modelo cargado con éxito:\", modelo_pkl)\n",
+        "print(\"Claves del modelo:\", modelo.keys())\n"
+      ],
+      "metadata": {
+        "id": "YFC7KpRWHc5P",
+        "outputId": "7ce96a62-e6ff-48d5-9542-50c0e79e067d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "deteccion_palabra_clave.pkl  modelo_entrenado.pkl\n",
+            "Modelo cargado con éxito: /content/modelo_extraido/deteccion_palabra_clave.pkl\n",
+            "Claves del modelo: dict_keys(['Xw_', 'fmax', 'labels', 'vf', 'fs'])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sAm6KmPD_rct",
-        "outputId": "a340473b-443e-40cd-a36e-838ce531e8c2"
+        "outputId": "2d039361-70a8-4337-f924-eafa7e6bc678"
       },
       "outputs": [
         {
@@ -57,7 +95,7 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "\n",
-        "zip_path = \"/content/drive/MyDrive/2025_02_09_00_06_modelo.zip\"\n",
+        "zip_path = \"/content/drive/MyDrive/PARCIAL DEFINITIVO 2 DEF.zip\"\n",
         "extract_path = \"/content/modelo_extraido\"\n",
         "\n",
         "\n",
@@ -107,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KiEIvKWM_uQQ",
-        "outputId": "c4ec2d1f-6c15-4755-b4a8-ac22e5d2a164"
+        "outputId": "5c3b6bd7-0fd9-4124-8c40-9dedc02dcc8d"
       },
-      "execution_count": 63,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,9 +192,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b23bb43-12d5-4ee0-b7c5-883fb0192e14"
+        "outputId": "9713fb69-f9ff-4bd2-e429-b6d1fdad1d3a"
       },
-      "execution_count": 64,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,9 +222,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iTXCOnwWHwyf",
-        "outputId": "28e53819-9dfb-4d0f-9c40-b5ff91a53c22"
+        "outputId": "96f80eff-8a0d-4cf1-9ea2-83edcf3eb823"
       },
-      "execution_count": 65,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,11 +240,18 @@
       "source": [
         "import numpy as np\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import librosa\n",
+        "import librosa\n",
+        "mfcc = librosa.feature.mfcc(y=x[:, 0], sr=fs, n_mfcc=13)  # 13 coeficientes\n",
+        "\n",
+        "sca = StandardScaler()\n",
+        "Xw_entrada = sca.fit_transform(np.abs(Xw).T).T\n",
+        "\n",
         "\n",
         "#  Calcular Transformada de Fourier y normalizar espectros\n",
         "Xw = np.fft.rfft(x_t, axis=1).mean(axis=-1)  # FFT y promediado de canales\n",
-        "sca = MinMaxScaler()\n",
-        "Xw_entrada = sca.fit_transform(np.abs(Xw).T).T  # Normalización\n",
+        "\n",
         "\n",
         "print(\" FFT calculada y espectros normalizados:\", Xw_entrada.shape)\n",
         "\n",
@@ -218,7 +263,7 @@
         "distancias = np.linalg.norm(Xw_entrada - Xw_, axis=1)\n",
         "\n",
         "#  Definir un umbral para detección (ajustar según pruebas)\n",
-        "umbral = np.percentile(distancias, 30)  # 30% de los valores más bajos\n",
+        "umbral = np.percentile(distancias, 30)\n",
         "\n",
         "#  Predecir si cada segmento tiene la palabra clave\n",
         "detecciones = distancias < umbral  # True = detectado, False = no detectado\n",
@@ -235,17 +280,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fIcqzpErSMxh",
-        "outputId": "2a3080d8-fa18-43a2-ad5f-670798be8624"
+        "outputId": "d1acf5c2-8602-4ac1-972c-afe30026e13f"
       },
-      "execution_count": 66,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             " FFT calculada y espectros normalizados: (3, 24001)\n",
-            " Segmento 0 (0.0s - 1.0s):  SÍ contiene la palabra clave\n",
-            " Segmento 1 (1.0s - 2.0s): NO contiene la palabra clave\n",
+            " Segmento 0 (0.0s - 1.0s): NO contiene la palabra clave\n",
+            " Segmento 1 (1.0s - 2.0s):  SÍ contiene la palabra clave\n",
             " Segmento 2 (2.0s - 3.0s): NO contiene la palabra clave\n",
             "\n",
             " Total segmentos con palabra clave: 1 de 3\n"
@@ -275,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dN_Nv2HjS1FI",
-        "outputId": "03d7177f-925a-4caa-bc2d-b04a84d35caa"
+        "outputId": "69664f5e-6a8b-4a2e-f5d2-07b024faa0a8"
       },
-      "execution_count": 67,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,9 +402,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d6foe_8_TFqa",
-        "outputId": "bcfc02c5-d656-40d3-dc72-a6f59ee44f0e"
+        "outputId": "659962d3-af5f-45dc-e684-b84f6bba0769"
       },
-      "execution_count": 68,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +430,7 @@
       "metadata": {
         "id": "4-rd3YdjTT97"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     }
   ]
