Se creó con Colab

--- a/Marcelo_y_Estefania.ipynb
+++ b/Marcelo_y_Estefania.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9HHfIzRzWF9voNp6o+7PY",
+      "authorship_tag": "ABX9TyMSzd9v5i+KXWTlX4nYIgur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
-        "id": "EeaSnn9KVlzt"
+        "id": "EeaSnn9KVlzt",
+        "outputId": "277decf7-e4e4-4527-fba2-e48bc35b77b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.3/44.3 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.6/9.6 MB\u001b[0m \u001b[31m32.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m33.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.1/79.1 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "source": [
         "#instalación de librerías\n",
         "!pip install streamlit -q"
@@ -44,22 +60,10 @@
         "!mkdir pages"
       ],
       "metadata": {
-        "id": "86ffP6p3V54Z",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9a5b3e1d-ddee-4439-b7b6-dd31d1171692"
+        "id": "86ffP6p3V54Z"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘pages’: File exists\n"
-          ]
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -104,15 +108,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e13da3b1-2b96-4da1-82b1-4c502ed2f608"
+        "outputId": "e64e39cd-523c-4756-8243-0eddb2af7d4f"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting Segundo_Parcial.py\n"
+            "Writing Segundo_Parcial.py\n"
           ]
         }
       ]
@@ -430,9 +434,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a6c8cba-4182-4e9a-c93a-766f4281abba"
+        "outputId": "a0e522bb-543b-4f97-b928-9b69f37f496d"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +455,7 @@
       "metadata": {
         "id": "DBOyUwJfaoRw"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -464,93 +468,50 @@
     {
       "cell_type": "code",
       "source": [
-        "!apt-get update\n",
-        "!apt-get install ffmpeg -y\n",
-        "!pip install -U yt-dlp\n",
-        "\n",
-        "\n",
-        "!pip install pydub"
+        "!pip install pydub\n",
+        "!python3 -m pip install --force-reinstall https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz\n",
+        "!pip install soundfile #librerias descarga Youtube y manejo de audios en python\n",
+        "!pip install scipy\n",
+        "!pip install sympy"
       ],
       "metadata": {
         "id": "3P9x_yCX9-qv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6eb1b864-9bd4-4779-8a3a-e3636d25b2e4"
+        "outputId": "2b02e0ce-a243-4709-8625-9de76689b538"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:3 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:5 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Reading package lists... Done\n",
-            "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "ffmpeg is already the newest version (7:4.4.2-0ubuntu0.22.04.1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 24 not upgraded.\n",
-            "Requirement already satisfied: yt-dlp in /usr/local/lib/python3.11/dist-packages (2025.1.26)\n",
-            "Requirement already satisfied: pydub in /usr/local/lib/python3.11/dist-packages (0.25.1)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!sudo apt-get install yt-dlp\n",
-        "!sudo apt update && sudo apt install ffmpeg\n"
-      ],
-      "metadata": {
-        "id": "4tcUxKdWshsT",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a54daa79-e8c0-43aa-c515-65452d5fbc8f"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "yt-dlp is already the newest version (2022.04.08-1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 24 not upgraded.\n",
-            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:3 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:5 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "24 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
-            "\u001b[1;33mW: \u001b[0mSkipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\u001b[0m\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "ffmpeg is already the newest version (7:4.4.2-0ubuntu0.22.04.1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 24 not upgraded.\n"
+            "Requirement already satisfied: pydub in /usr/local/lib/python3.11/dist-packages (0.25.1)\n",
+            "Collecting https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz\n",
+            "  Using cached https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz (2.7 MB)\n",
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: yt-dlp\n",
+            "  Building wheel for yt-dlp (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for yt-dlp: filename=yt_dlp-2025.1.26-py3-none-any.whl size=2931853 sha256=5caafbd3f0f1fc8304c8917cfdd6323bfeb46282cc015a9586c285cd0e4a8355\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-bjhu7p44/wheels/2d/79/97/7209650ef73114e0fe0603480da012ad3afacb9cae6b8acd9a\n",
+            "Successfully built yt-dlp\n",
+            "Installing collected packages: yt-dlp\n",
+            "  Attempting uninstall: yt-dlp\n",
+            "    Found existing installation: yt-dlp 2025.1.26\n",
+            "    Uninstalling yt-dlp-2025.1.26:\n",
+            "      Successfully uninstalled yt-dlp-2025.1.26\n",
+            "Successfully installed yt-dlp-2025.1.26\n",
+            "Requirement already satisfied: soundfile in /usr/local/lib/python3.11/dist-packages (0.13.1)\n",
+            "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.11/dist-packages (from soundfile) (1.17.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from soundfile) (1.26.4)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.0->soundfile) (2.22)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (1.13.1)\n",
+            "Requirement already satisfied: numpy<2.3,>=1.22.4 in /usr/local/lib/python3.11/dist-packages (from scipy) (1.26.4)\n",
+            "Requirement already satisfied: sympy in /usr/local/lib/python3.11/dist-packages (1.13.1)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from sympy) (1.3.0)\n"
           ]
         }
       ]
@@ -562,15 +523,22 @@
         "\n",
         "import streamlit as st\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import os\n",
         "import subprocess\n",
         "import soundfile as sf\n",
         "from IPython.display import Audio\n",
-        "import yt_dlp\n",
+        "import yt_dlp as ytdl\n",
         "from pydub import AudioSegment\n",
         "from yt_dlp import YoutubeDL\n",
         "import time\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "import joblib\n",
+        "from scipy.fft import fft, fftfreq\n",
+        "from IPython.display import Audio\n",
+        "from pydub import AudioSegment\n",
+        "import io\n",
         "\n",
         "st.set_page_config(page_title=\"Señal portadora, señal mensaje y un ejemplo de aplicación con una canción\", page_icon=\"🎵\")\n",
         "st.title(\"SEÑAL PORTADORA, SEÑAL MENSAJE Y UN EJEMPLO DE APLICACIÓN CON UNA CANCIÓN.🎵\")\n",
@@ -602,7 +570,11 @@
         "Im=st.number_input(\"Ingrese el índice de modulación deseado (se sgugiere valores entre 0 y 1:)\", min_value=0.0, max_value=1.0, value=0.5)\n",
         "\n",
         "#Descargamos el audio de Youtube\n",
-        "\n",
+        "try: #para manejar la falta de instalación\n",
+        "    import yt_dlp\n",
+        "except ImportError:\n",
+        "    st.error(\"El módulo 'yt_dlp' no está instalado. Por favor, instálalo usando 'pip install yt-dlp'.\")\n",
+        "    st.stop()  # Detener la ejecución si no se puede importar yt_dlp\n",
         "link=st.text_input(\"Ingrese el link del video de Youtube:\",\"https://www.youtube.com/watch?v=wDjeBNv6ip0\")\n",
         "if st.button(\"Descargar y convertir\"):\n",
         "    st.write(\"Descargando audio...\")\n",
@@ -739,18 +711,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "48e5252f-2aa4-4ad3-c8ad-1a054f720184"
+        "outputId": "8760bf2a-e77b-408c-dcc8-261b062feb63"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing Segundo_Punto.py\n"
+            "Overwriting Segundo_Punto.py\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if subprocess.run(\"ffmpeg -version\", shell=True, capture_output=True).returncode != 0:\n",
+        "    st.error(\"Error: ffmpeg no está instalado o no está en el PATH.\")\n",
+        "    st.stop()\n"
+      ],
+      "metadata": {
+        "id": "V2yDqW7xZZPR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -760,7 +745,7 @@
       "metadata": {
         "id": "7aGbsktSed2z"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -915,9 +900,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5172afc-23bb-4003-9594-3ccf7cb99737"
+        "outputId": "c11b8978-8160-414d-a3a9-0eb0a49e9f4b"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +921,7 @@
       "metadata": {
         "id": "euJ7AUNLm00n"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -978,35 +963,35 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22c1a6bb-2735-487f-c846-15821ba988c3"
+        "outputId": "9173a6d6-e034-4705-9c39-58369bc5a2d6"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-02-10 19:53:56--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
-            "Resolving github.com (github.com)... 140.82.116.3\n",
-            "Connecting to github.com (github.com)|140.82.116.3|:443... connected.\n",
+            "--2025-02-13 16:59:11--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://github.com/cloudflare/cloudflared/releases/download/2025.2.0/cloudflared-linux-amd64 [following]\n",
-            "--2025-02-10 19:53:56--  https://github.com/cloudflare/cloudflared/releases/download/2025.2.0/cloudflared-linux-amd64\n",
+            "--2025-02-13 16:59:11--  https://github.com/cloudflare/cloudflared/releases/download/2025.2.0/cloudflared-linux-amd64\n",
             "Reusing existing connection to github.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/cf0d9618-6195-40d3-8bb8-d0eacb6a1591?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250210%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250210T195356Z&X-Amz-Expires=300&X-Amz-Signature=1928941e8cc4de00c87a48e16c59f0d776e99bd6a887fd936bc8fef5eab43a44&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
-            "--2025-02-10 19:53:56--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/cf0d9618-6195-40d3-8bb8-d0eacb6a1591?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250210%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250210T195356Z&X-Amz-Expires=300&X-Amz-Signature=1928941e8cc4de00c87a48e16c59f0d776e99bd6a887fd936bc8fef5eab43a44&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
+            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/cf0d9618-6195-40d3-8bb8-d0eacb6a1591?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250213%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250213T165911Z&X-Amz-Expires=300&X-Amz-Signature=3ebca99f551c0992339c4846ed1679c2d10102438028443fc99832b822aaf47b&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
+            "--2025-02-13 16:59:11--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/cf0d9618-6195-40d3-8bb8-d0eacb6a1591?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250213%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250213T165911Z&X-Amz-Expires=300&X-Amz-Signature=3ebca99f551c0992339c4846ed1679c2d10102438028443fc99832b822aaf47b&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
             "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 37811777 (36M) [application/octet-stream]\n",
             "Saving to: ‘cloudflared-linux-amd64’\n",
             "\n",
-            "cloudflared-linux-a 100%[===================>]  36.06M   116MB/s    in 0.3s    \n",
+            "cloudflared-linux-a 100%[===================>]  36.06M   230MB/s    in 0.2s    \n",
             "\n",
-            "2025-02-10 19:53:57 (116 MB/s) - ‘cloudflared-linux-amd64’ saved [37811777/37811777]\n",
+            "2025-02-13 16:59:12 (230 MB/s) - ‘cloudflared-linux-amd64’ saved [37811777/37811777]\n",
             "\n",
-            "Tu aplicación está disponible en: https://cold-kazakhstan-attractions-romania.trycloudflare.com\n"
+            "Tu aplicación está disponible en: https://options-characterization-export-inclusive.trycloudflare.com\n"
           ]
         }
       ]
